# last_snow

./: README.md  package-lock.json  package.json
.github/: sources.list
.github/workflows/: build.yml
src/: App.tsx  const.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/src/: main.rs
src/components/: ActionButton.tsx  KeyboardHint.tsx  LanguageButton.tsx  LanguageDrawer.tsx  TextAreaWithControls.tsx  index.ts
